minor media changes

--- a/BlogArticle.html
+++ b/BlogArticle.html
@@ -73,7 +73,7 @@
             </div>
             <nav>
                 <div class="headlogo">
-                    <img src="/media/images/Logo.svg" alt="">
+                    <img src="media/images/Logo.svg" alt="">
                     <ul>
                         <li><a href="#" class="navbtn">Home</a></li>
                         <li><a href="#" class="navbtn">About</a></li>
@@ -104,7 +104,7 @@
                 <div class="articleBox">
                     <div class="articleRow">
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle1.png" alt="">
+                            <img src="media/images/blogArticle1.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>How to prepare a delicious gluten free sushi</b>
@@ -112,21 +112,21 @@
 
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle2.png" alt="">
+                            <img src="media/images/blogArticle2.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>Exclusive baking lessons from the pastry king</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle3.png" alt="">
+                            <img src="media/images/blogArticle3.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>How to prepare the perfect fries in an air fryer</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle4.png" alt="">
+                            <img src="media/images/blogArticle4.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>How to prepare delicious chicken tenders</b>
@@ -135,28 +135,28 @@
 
 
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle5.png" alt="">
+                            <img src="media/images/blogArticle5.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>5 great cooking gadgets you can buy to save time</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle6.png" alt="">
+                            <img src="media/images/blogArticle6.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>The secret tips & tricks to prepare a perfect burger</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle7.png" alt="">
+                            <img src="media/images/blogArticle7.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>7 delicious cheesecake recipes you can prepare</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle8.png" alt="">
+                            <img src="media/images/blogArticle8.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>5 great pizza restaurants you should visit this city</b>
@@ -165,28 +165,28 @@
 
 
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle9.png" alt="">
+                            <img src="media/images/blogArticle9.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>5 great cooking gadgets you can buy to save time</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle10.png" alt="">
+                            <img src="media/images/blogArticle10.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>How to prepare a delicious gluten free sushi</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle11.png" alt="">
+                            <img src="media/images/blogArticle11.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>Top 20 simple and quick desserts for kids</b>
                             </div>
                         </div>
                         <div class="cardArticle">
-                            <img src="/media/images/blogArticle12.png" alt="">
+                            <img src="media/images/blogArticle12.png" alt="">
                             <div class="cardDesp">
                                 <p>January&nbsp;3&comma;&nbsp;&nbsp;2023</p>
                                 <b>Top 20 simple and quick desserts for kids</b>
@@ -310,10 +310,10 @@
                         <b>Follow Us On Instagram</b>
                     </div>
                     <div class="fImgBox">
-                        <img src="/media/images/foot1Img.png" alt="">
-                        <img src="/media/images/foot2Img.png" alt="">
-                        <img src="/media/images/foot3Img.png" alt="">
-                        <img src="/media/images/foot4Img.png" alt="">
+                        <img src="media/images/foot1Img.png" alt="">
+                        <img src="media/images/foot2Img.png" alt="">
+                        <img src="media/images/foot3Img.png" alt="">
+                        <img src="media/images/foot4Img.png" alt="">
                     </div>
                 </div>
             </div>            
