--- a/bookTable.html
+++ b/bookTable.html
@@ -74,7 +74,7 @@
             </div>
             <nav>
                 <div class="headlogo">
-                    <img src="/media/images/Logo.svg" alt="">
+                    <img src="media/images/Logo.svg" alt="">
                     <ul>
                         <li><a href="#" class="navbtn">Home</a></li>
                         <li><a href="#" class="navbtn">About</a></li>
@@ -262,10 +262,10 @@
                         <b>Follow Us On Instagram</b>
                     </div>
                     <div class="fImgBox">
-                        <img src="/media/images/foot1Img.png" alt="">
-                        <img src="/media/images/foot2Img.png" alt="">
-                        <img src="/media/images/foot3Img.png" alt="">
-                        <img src="/media/images/foot4Img.png" alt="">
+                        <img src="media/images/foot1Img.png" alt="">
+                        <img src="media/images/foot2Img.png" alt="">
+                        <img src="media/images/foot3Img.png" alt="">
+                        <img src="media/images/foot4Img.png" alt="">
                     </div>
                 </div>
             </div>
