--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <nav>
                 <div class="headlogo">
-                    <img src="/media/images/Logo.svg" alt="">
+                    <img src="media/images/Logo.svg" alt="">
                     <ul>
                         <li><a href="./index.html" target="_blank" class="navbtn">Home</a></li>
                         <li><a href="#" class="navbtn">About</a></li>
@@ -108,7 +108,7 @@
             </div>
             <div class="menubox">
                 <div class="menucard">
-                    <img src="/media/icon/brekfast.svg" alt="">
+                    <img src="media/icon/brekfast.svg" alt="">
                     <h3>Breakfast</h3>
                     <p>In the new era of technology we look in the future with certainty and pride for our lif&period;
                     </p>
@@ -116,21 +116,21 @@
                 </div>
 
                 <div class="menucard">
-                    <img src="/media/icon/main dish.svg" alt="">
+                    <img src="media/icon/main dish.svg" alt="">
                     <h3>Main Dishes</h3>
                     <p>In the new era of technology we look in the future with certainty and pride for our lif&period;
                     </p>
                     <a href="#"><b>Explore menu</b></a>
                 </div>
                 <div class="menucard">
-                    <img src="/media/icon/drinks.svg" alt="">
+                    <img src="media/icon/drinks.svg" alt="">
                     <h3>Drinks</h3>
                     <p>In the new era of technology we look in the future with certainty and pride for our lif&period;
                     </p>
                     <a href="#"><b>Explore menu</b></a>
                 </div>
                 <div class="menucard">
-                    <img src="/media/icon/dessert.svg" alt="">
+                    <img src="media/icon/dessert.svg" alt="">
                     <h3>Desserts</h3>
                     <p>In the new era of technology we look in the future with certainty and pride for our lif&period;
                     </p>
@@ -141,7 +141,7 @@
         <section class="section2">
             <div class="merg">
                 <div class="mergImg">
-                    <img src="/media/images/provide_health.png" alt="">
+                    <img src="media/images/provide_health.png" alt="">
                     <div class="cvus">
                         <div class="cvusInfo">
                             <h3>Come and visit us</h3>
@@ -175,22 +175,22 @@
                 </div>
                 <div class="box">
                     <div class="eventsbox abox2 ">
-                        <img src="/media/images/caterings.png" alt="caterings">
+                        <img src="media/images/caterings.png" alt="caterings">
                         <h3>Caterings</h3>
                         <p>In the new era of technology we look <br> in the future with certainty for life.</p>
                     </div>
                     <div class="eventsbox abox2 birth">
-                        <img src="/media/images/birthday.png" alt="caterings">
+                        <img src="media/images/birthday.png" alt="caterings">
                         <h3>Birthdays</h3>
                         <p>In the new era of technology we look <br> in the future with certainty for life.</p>
                     </div>
                     <div class="eventsbox abox2">
-                        <img src="/media/images/weddings.png" alt="caterings">
+                        <img src="media/images/weddings.png" alt="caterings">
                         <h3>Weddings</h3>
                         <p>In the new era of technology we look <br> in the future with certainty for life.</p>
                     </div>
                     <div class="eventsbox">
-                        <img src="/media/images/events.png" alt="caterings">
+                        <img src="media/images/events.png" alt="caterings">
                         <h3>Events</h3>
                         <p>In the new era of technology we look <br> in the future with certainty for life.</p>
                     </div>
@@ -201,15 +201,15 @@
             <div class="main">
                 <div class="imgSec">
                     <div class="img1">
-                        <img src="/media/images/men_chef.png" alt="">
+                        <img src="media/images/men_chef.png" alt="">
                     </div>
                     <div class="colImg">
                         <div class="img2">
-                            <img src="/media/images/sour-curry-with-snakehead-fish-spicy-garden-hot-pot-thai-food 1.png"
+                            <img src="media/images/sour-curry-with-snakehead-fish-spicy-garden-hot-pot-thai-food 1.png"
                                 alt="">
                         </div>
                         <div class="img3">
-                            <img src="/media/images/sadj-iron-pot-with-various-salads 1.png" alt="">
+                            <img src="media/images/sadj-iron-pot-with-various-salads 1.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -220,13 +220,13 @@
                         desktop. </p>
                    </div>
                     <div class="info2">
-                        <b><img src="/media/icon/delivery.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delivery within 30 minutes</b>
+                        <b><img src="media/icon/delivery.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delivery within 30 minutes</b>
                     </div>
                     <div class="info2">
-                        <b><img src="/media/icon/onlineServices.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Online Services Available</b>
+                        <b><img src="media/icon/onlineServices.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Online Services Available</b>
                     </div>
                     <div class="info2">
-                       <b><img src="/media/icon/bestOffer.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Best Offer & Prices</b>
+                       <b><img src="media/icon/bestOffer.svg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Best Offer & Prices</b>
                     </div>                                  
                 </div>
             </div>
@@ -243,7 +243,7 @@
                         smiles&period;</p>
                     <hr>
                     <div class="customerimg">
-                        <img src="/media/images/SophireRobson.png" alt="">
+                        <img src="media/images/SophireRobson.png" alt="">
                         <div>
                             <p> <b>Sophire Robson</b></p>
                             <p>Los Angeles&comma; CA</p>
@@ -260,7 +260,7 @@
                     </p>
                     <hr>
                     <div class="customerimg">
-                        <img src="/media/images/MattCannon.png" alt="">
+                        <img src="media/images/MattCannon.png" alt="">
                         <div>
                             <p><b>Matt Cannon</b></p>
                             <p>San Diego&period; CA</p>
@@ -276,7 +276,7 @@
                         Highly recommended&period;</p>
                     <hr>
                     <div class="customerimg">
-                        <img src="/media/images/AndySmith.png" alt="">
+                        <img src="media/images/AndySmith.png" alt="">
                         <div>
                             <p><b>Andy Smith</b></p>
                             <p>San Francisco&period; CA</p>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="ourfoodContainer">
                     <div class="burgir">
-                        <img src="/media/images/Burgar.png" alt="">
+                        <img src="media/images/Burgar.png" alt="">
                         <div class="burinfo">
                             <p>January 3&nbsp; 2023</p>
                             <b>The secret tips & tricks to prepare a perfect burger & pizza <br> for our customers</b>
@@ -305,28 +305,28 @@
                     </div>
                     <div class="foonInrCont">
                         <div class="sec5Blogcard">
-                            <img src="/media/images/fries.png" alt="">
+                            <img src="media/images/fries.png" alt="">
                             <div class="foodinfo">
                                 <p>January 3&nbsp; 2023</p>
                                 <b>How to prepare the perfect french fries in an air fryer</b>
                             </div>
                         </div>
                         <div class="sec5Blogcard">
-                            <img src="/media/images/cNugets.png" alt="">
+                            <img src="media/images/cNugets.png" alt="">
                             <div class="foodinfo">
                                 <p>January 3&nbsp; 2023</p>
                                 <b>How to prepare delicious chicken tenders</b>
                             </div>
                         </div>
                         <div class="sec5Blogcard">
-                            <img src="/media/images/cupCake.png" alt="">
+                            <img src="media/images/cupCake.png" alt="">
                             <div class="foodinfo">
                                 <p>January 3&nbsp; 2023</p>
                                 <b>7 delicious cheesecake recipes you can prepare</b>
                             </div>
                         </div>
                         <div class="sec5Blogcard">
-                            <img src="/media/images/pizza.png" alt="">
+                            <img src="media/images/pizza.png" alt="">
                             <div class="foodinfo">
                                 <p>January 3&nbsp; 2023</p>
                                 <b>5 great pizza restaurants you should visit this city</b>
@@ -450,10 +450,10 @@
                         <b>Follow Us On Instagram</b>
                     </div>
                     <div class="fImgBox">
-                        <img src="/media/images/foot1Img.png" alt="">
-                        <img src="/media/images/foot2Img.png" alt="">
-                        <img src="/media/images/foot3Img.png" alt="">
-                        <img src="/media/images/foot4Img.png" alt="">
+                        <img src="media/images/foot1Img.png" alt="">
+                        <img src="media/images/foot2Img.png" alt="">
+                        <img src="media/images/foot3Img.png" alt="">
+                        <img src="media/images/foot4Img.png" alt="">
                     </div>
                 </div>
             </div>
