--- a/menu.html
+++ b/menu.html
@@ -74,7 +74,7 @@
             </div>
             <nav>
                 <div class="headlogo">
-                    <img src="/media/images/Logo.svg" alt="">
+                    <img src="media/images/Logo.svg" alt="">
                     <ul>
                         <li><a href="#" class="navbtn">Home</a></li>
                         <li><a href="#" class="navbtn">About</a></li>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="menucard ">
                     <div class="menuItem ">
-                        <img src="/media/images/friedEgg.png" alt="">
+                        <img src="media/images/friedEgg.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;9&period;99</h3>
                             <b>Fried Eggs</b>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/hwaiianPizza.png" alt="">
+                        <img src="media/images/hwaiianPizza.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;15&period;99</h3>
                             <b>Hawaiian&nbsp;Pizza</b>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/martinzeMoctali.png" alt="">
+                        <img src="media/images/martinzeMoctali.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;7&period;25</h3>
                             <b>Martinze&nbsp;Moctail</b>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/butterscotchCake.png" alt="">
+                        <img src="media/images/butterscotchCake.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;20&period;99</h3>
                             <b>Butterscotch&nbsp;Cake</b>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/mintLemonade.png" alt="">
+                        <img src="media/images/mintLemonade.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;5&period;89</h3>
                             <b>Mint&nbsp;Lemon</b>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/chocolateIcecream.png" alt="">
+                        <img src="media/images/chocolateIcecream.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;18&period;05</h3>
                             <b>Chocolate&nbsp;Icecream</b>
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/cheeseBurgir.png" alt="">
+                        <img src="media/images/cheeseBurgir.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;12&period;55</h3>
                             <b>Cheese&nbsp;Burgur</b>
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                     <div class="menuItem">
-                        <img src="/media/images/classicWaffles.png" alt="">
+                        <img src="media/images/classicWaffles.png" alt="">
                         <div class="itemInfo">
                             <h3>&dollar;&nbsp;12&period;99</h3>
                             <b>Classic&nbsp;Waffles</b>
@@ -430,10 +430,10 @@
                         <b>Follow Us On Instagram</b>
                     </div>
                     <div class="fImgBox">
-                        <img src="/media/images/foot1Img.png" alt="">
-                        <img src="/media/images/foot2Img.png" alt="">
-                        <img src="/media/images/foot3Img.png" alt="">
-                        <img src="/media/images/foot4Img.png" alt="">
+                        <img src="media/images/foot1Img.png" alt="">
+                        <img src="media/images/foot2Img.png" alt="">
+                        <img src="media/images/foot3Img.png" alt="">
+                        <img src="media/images/foot4Img.png" alt="">
                     </div>
                 </div>
             </div>
